--- a/Development_Code/Web_Application_Code/templates/About_Carego.html
+++ b/Development_Code/Web_Application_Code/templates/About_Carego.html
@@ -22,14 +22,14 @@
 <h1 style="color: #D2691E; font-size:40px; font-weight: normal;" align="center">
     ABOUT CAREGO
 </h1>
-<p style="font-family: Arial, Helvetica, sans-serif; font-size:18px;" align="center">
-    CareGo is a technology business based in Burlington, Ontario. The company provides products and services <br> that
-    enable manufacturers such as steel mills, steel service centers and pipe and tube mills, utilize <br> automation
-    to move, store and retrieve their heavy products (steel coils, plate, slabs, sheets, pipes <br> and tubes) with
+<p style="font-family: Arial, Helvetica, sans-serif; font-size:18px;" >
+    CareGo is a technology business based in Burlington, Ontario. The company provides products and services that
+    enable manufacturers such as steel mills, steel service centers and pipe and tube mills, utilize automation
+    to move, store and retrieve their heavy products (steel coils, plate, slabs, sheets, pipes and tubes) with
     unparalleled ease, safety and efficiency.
 </p>
 
-<br><br><br>
+<br><br><br><br>
 <footer>
 	<div class="centerImage">
         <img src="https://carego.com/wp-content/themes/carego/img/logo-footer.jpg" alt="Carego - Footer Logo"/>
