Updating Home.html

--- a/Development_Code/Web_Application_Code/templates/Home.html
+++ b/Development_Code/Web_Application_Code/templates/Home.html
@@ -111,8 +111,8 @@
             </button>
             <div class="dropdown-content">
 	            <a title="About CareGo" href="{{ url_for('about_carego') }}">ABOUT CAREGO</a>
-	            <a title="About TELIA" href="#">ABOUT TELIA</a>
-	            <a title="Emergency Evacuation Procedure" href="#">EMERGENCY EVACUATION PROCEDURE</a>
+	            <a title="About TELIA" href="{{ url_for('about_telia') }}">ABOUT TELIA</a>
+	            <a title="Emergency Evacuation Procedure" href="{{ url_for('emergency_evacuation_procedure') }}">EMERGENCY EVACUATION PROCEDURE</a>
             </div>
         </div>
         <div class="dropdown">
