Updating Home.html

--- a/Development_Code/Web_Application_Code/templates/Home.html
+++ b/Development_Code/Web_Application_Code/templates/Home.html
@@ -125,7 +125,7 @@
             </div>
         </div>
         <a href="#home">SEARCH</a>
-        <a href="#home">CONTACT US</a>
+        <a href="{{ url_for('contact_us') }}">CONTACT US</a>
         <a href="#home">ADMIN LOGIN</a>
     </div>
 </div>
@@ -149,7 +149,7 @@
 	<div class="centerImage">
         <img src="https://carego.com/wp-content/themes/carego/img/logo-footer.jpg" alt="Carego - Footer Logo"/>
         <p style="font-family: Arial, Helvetica, sans-serif; font-size:16px" align="center">TELIA is a registered trademark of Carego Innovative Solutions Inc. and is used under license. &copy; 2020 Carego Tek Inc.</p>
-        <p style="font-family: Arial, Helvetica, sans-serif; font-size:16px" align="center">All Rights Reserved. | <a href="/sitemap/">Sitemap</a></p>
+        <p style="font-family: Arial, Helvetica, sans-serif; font-size:16px" align="center">All Rights Reserved.</p>
 	</div>
 </footer>
 
