Updating About_Carego.html

--- a/Development_Code/Web_Application_Code/templates/About_Carego.html
+++ b/Development_Code/Web_Application_Code/templates/About_Carego.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CareGo Robotic Greeter - About CareGo</title>
+    <title>About CareGo</title>
 </head>
 <body>
 {% extends "Home.html" %}
 
 {% block main %}
+
     <style>
         body {
             font-family: Chandas;
@@ -38,8 +39,7 @@
 	</div>
 </footer>
 
-
-
 {% endblock %}
+
 </body>
 </html>
