Adding Contact_US.html

--- a/Development_Code/Web_Application_Code/templates/Contact_US.html
+++ b/Development_Code/Web_Application_Code/templates/Contact_US.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CareGo Robotic Greeter - Contact US</title>
+    <title>Contact US</title>
 </head>
 <body>
 {% extends "Home.html" %}
 
 {% block main %}
+
     <style>
         body {
             font-family: Chandas;
@@ -41,8 +42,7 @@
 	</div>
 </footer>
 
-
-
 {% endblock %}
+
 </body>
 </html>
